--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.5.2",
     "@relume_io/relume-tailwind": "^0.5.1",
     "@relume_io/relume-ui": "^0.5.1",
+    "intasend-inlinejs-sdk": "^4.0.6",
     "lucide-react": "^0.441.0",
     "next": "14.2.10",
     "react": "^18",
