--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@clerk/nextjs": "^5.5.2",
     "@relume_io/relume-tailwind": "^0.5.1",
     "@relume_io/relume-ui": "^0.5.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.5.4",
     "intasend-inlinejs-sdk": "^4.0.6",
     "lucide-react": "^0.441.0",
     "next": "14.2.10",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.5.2",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
