--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.5.2",
+    "@prisma/client": "^5.19.1",
     "@relume_io/relume-tailwind": "^0.5.1",
     "@relume_io/relume-ui": "^0.5.1",
     "clsx": "^2.1.1",
@@ -18,6 +19,7 @@
     "lucide-react": "^0.441.0",
     "next": "14.2.10",
     "react": "^18",
+    "react-admin": "^5.1.5",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
     "zustand": "^4.5.5"
@@ -29,6 +31,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.10",
     "postcss": "^8",
+    "prisma": "^5.19.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
