--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "intasend-inlinejs-sdk": "^4.0.6",
     "lucide-react": "^0.441.0",
     "next": "14.2.10",
+    "ra-data-simple-rest": "^5.1.5",
     "react": "^18",
     "react-admin": "^5.1.5",
     "react-dom": "^18",
