--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.5.2",
+    "@ngrok/ngrok": "^1.4.1",
     "@prisma/client": "^5.19.1",
     "@prisma/extension-pulse": "^1.2.0",
     "@relume_io/relume-tailwind": "^0.5.1",
     "@relume_io/relume-ui": "^0.5.1",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
     "intasend-inlinejs-sdk": "^4.0.6",
