--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18",
     "react-admin": "^5.1.5",
     "react-dom": "^18",
+    "react-query": "^3.39.3",
     "tailwind-merge": "^2.5.2",
     "zustand": "^4.5.5"
   },
